<resources>
    <string name="app_name">CECS448</string>
    <string name="no_goals_message">No goals exist yet!</string>
    <string name="no_expenses_message">No transactions exist yet!</string>
    <string name="no_data_message">No data exist yet!</string>
    <string name="create_goal">Create</string>
    <string name="goal_name">Category: </string>
    <string name="goal_limit">Monthly limit: </string>
    <string name="goals_header">Goals</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="single_goal">Goal</string>
    <string name="new_limit">New limit: </string>
    <string name="curr_limit">limit: </string>
</resources>
