<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GoalsActivity">


    <ImageButton
        android:id="@+id/transactionListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        android:src="@drawable/list_button" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        android:src="@drawable/home_button_highlighted" />

    <ImageButton
        android:id="@+id/pieChartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        android:src="@drawable/pie_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goal_popup"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/create_new_category_popup_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/goal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:fontFamily="monospace"
            android:text="@string/goal_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8D8D8D"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goal_category"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:fontFamily="monospace"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8D8D8D"
            android:textSize="28sp"
            app:layout_constraintRight_toRightOf="@id/goal_name"
            app:layout_constraintStart_toEndOf="@id/goal_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_goal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/edit_goal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8D8D8D"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/single_goal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8D8D8D"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/new_lim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:fontFamily="monospace"
            android:text="@string/new_limit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8D8D8D"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goal_lim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:fontFamily="monospace"
            android:text="@string/curr_limit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8D8D8D"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_limit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_field_background"
            android:ems="10"
            android:inputType="number"
            android:fontFamily="monospace"
            android:hint=" Limit Amount"
            android:textAlignment="textStart"
            android:textColor="#8D8D8D"
            android:textColorHint="#8D8D8D"
            app:layout_constraintBottom_toBottomOf="@id/new_lim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="@id/new_lim"
            app:layout_constraintTop_toTopOf="@id/new_lim"
            app:layout_constraintVertical_bias="0.553" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/submit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875" />

        <Button
            android:id="@+id/edit_goal"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/back_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/delete_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="@id/back_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recycler_background"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/goals_recycler"
            android:layout_width="350dp"
            android:layout_height="370dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_goals_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:fontFamily="monospace"
            android:text="@string/no_goals_message"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:fontFamily="monospace"
            android:text="@string/goals_header"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/create_goal"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/create_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_background" />


</androidx.constraintlayout.widget.ConstraintLayout>